syntax = "proto3";

option go_package = "proto-example/app/proto/sample";

enum AddressType{
  ADDRESS_TYPE_UNSPCIFIED = 0;
  ADDRESS_TYPE_URBAN = 1;
  ADDRESS_TYPE_VILLAGE = 2;
}

message FullAddress {
  string buildingName = 1;
  string streetName = 2;
  string areaName = 3;
  string cityName = 4;
  string districtName = 5;
  string stateName = 6;
  string countryName = 7;
  int32 pinCode = 8;
  optional string googleLocation = 9;
  repeated string landMarks  = 11;
  map<string, string> otherInformations = 12;
  AddressType addressType = 13;
}



message AddressRequest{
  string name = 1;
  string pan = 2;
  string email = 3;
  uint32 phone = 4;
  FullAddress address = 5;
}

message AddressResponse{
  uint32 id = 1;
}

service AddressService{
  rpc Add(FullAddress) returns (AddressResponse);
}